fix size of h1 on mobile

--- a/frontend/public/styles/style.styl
+++ b/frontend/public/styles/style.styl
@@ -222,8 +222,9 @@ footer
                 background-color actionColor
                 color #fff
 
-pre code
+.single pre code
     font-size .8em
+    line-height 1.3em
     border-left 15px solid darken(backgroundColor, 15%)
     border-right 15px solid darken(backgroundColor, 20%)
     border-top 15px solid darken(backgroundColor, 35%)
